Bug 1234230: Don't pass null images for video encoding, and don't reencode the same image r=roc Largely clones logic from OMXEncoder.

MozReview-Commit-ID: JfSERuCCPzT